AC_INIT([watson-c], [0.7], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC

AC_CHECK_FUNCS([regcomp])
AC_CHECK_HEADERS([stdint.h stdlib.h jansson.h libfyaml.h string.h])
AC_CHECK_HEADER_STDBOOL
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_PREREQ
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT